# learning-platform

./: .gitignore  README.md  courses
Agentic_prompt_engineering/: Simplified_Agent_Prompts.md  extract_image_info.py  notes.txt
Agentic_worflows/: notes_john_kim.md
CV/: hc_cv_new_eng.tex  hc_cv_new_ger.tex  hc_cv_old_eng.tex  ines.tex  ines_new.tex
DSA/: ROADMAP.md  prompting.md
DSA/phase_1/: Answers to Summary.md  Notes.md  Notes_task.md  Solutionsto9inNotes.md  binary_search.c  bubble_sort.c  euclid.c  loop_seq.c  recursion.c  timing.c
Doings_2026/: Tasks.txt
GoogleAIEssentials/: notes.md  notes.txt  notes_backup.md
MBSE-Siemens/: notes.txt
SoftwareDesignAndArchitecture/: CMakeLists.txt  README.md  design_roadmap.md  dp_generic.md  dp_rtos.md  promt.txt
SoftwareDesignAndArchitecture/c_code/Observer/: main.c
SoftwareDesignAndArchitecture/c_code/Observer/Observers/: bms_observers.h
SoftwareDesignAndArchitecture/c_code/Observer/Subject/: battery_monitor.h
SoftwareDesignAndArchitecture/c_code_embedded_designs/HardwareAdapter/: ilight.h  led_adapter.h
SoftwareDesignAndArchitecture/c_code_embedded_designs/HardwareAdapter/Practice/: main.c  timer_adapter.c
SoftwareDesignAndArchitecture/c_code_embedded_designs/HardwareProxy/: led_driver.h  main.c
SoftwareDesignAndArchitecture/c_code_embedded_designs/HardwareProxy/Practice/: main.c
SoftwareDesignAndArchitecture/c_code_embedded_designs/Mediator/: climate_mediator.c  climate_mediator.h  components.h
SoftwareDesignAndArchitecture/cpp_code_embedded_designs/HardwareAdapter/: main.cpp
SoftwareDesignAndArchitecture/cpp_code_embedded_designs/HardwareAdapter/Practice/: ITimer.hpp  task_description.md
SoftwareDesignAndArchitecture/cpp_code_embedded_designs/HardwareProxy/: LedDriver.hpp  main.cpp
SoftwareDesignAndArchitecture/cpp_code_embedded_designs/HardwareProxy/Practice/: TimerDriver.hpp
SoftwareDesignAndArchitecture/cpp_code_embedded_designs/Mediator/: ClimateComponents.hpp
SoftwareDesignAndArchitecture/design_patterns_study_embedded_designs/: HardwareProxy.md  Observer_Pattern.md
SoftwareDesignAndArchitecture/embedded/exercises/c/HardwareAccess/HardwareAdapter/: itimer.h  task_description.md  timer_adapter.h
SoftwareDesignAndArchitecture/embedded/exercises/c/HardwareAccess/HardwareProxy/: task_description.md  timer_driver.c  timer_driver.h
SoftwareDesignAndArchitecture/embedded/exercises/cpp/HardwareAccess/HardwareAdapter/: BitCruncherAdapter.hpp  main.cpp
SoftwareDesignAndArchitecture/embedded/exercises/cpp/HardwareAccess/HardwareProxy/: main.cpp
SoftwareDesignAndArchitecture/embedded/src/c/HardwareAccess/HardwareAdapter/: led_adapter.c  main.c
SoftwareDesignAndArchitecture/embedded/src/c/HardwareAccess/HardwareProxy/: led_driver.c  main.c
SoftwareDesignAndArchitecture/embedded/src/c/HardwareAccess/Mediator/: components.c  main.c
SoftwareDesignAndArchitecture/embedded/src/c/HardwareAccess/Observer/Observers/: bms_observers.c
SoftwareDesignAndArchitecture/embedded/src/c/HardwareAccess/Observer/Subject/: battery_monitor.c
SoftwareDesignAndArchitecture/embedded/src/cpp/HardwareAccess/HardwareAdapter/: ILight.hpp  LedAdapter.hpp  main.cpp
SoftwareDesignAndArchitecture/embedded/src/cpp/HardwareAccess/HardwareProxy/: main.cpp
SoftwareDesignAndArchitecture/embedded/src/cpp/HardwareAccess/Mediator/: ClimateMediator.hpp  concept_demo.hpp  main.cpp
SoftwareDesignAndArchitecture/embedded/src/cpp/HardwareAccess/Observer/: Bms.hpp  Observers.hpp  main.cpp
SoftwareDesignAndArchitecture/embedded/study/HardwareAccess/: HardwareAdapter.md  Mediator.md
SoftwareDesignAndArchitecture/references/: dp_embedded.md  dp_generic.md
